# Project-3

./: Dockerfile  check.sh  compose.yaml  main.py  models.py  pyproject.toml  readme.md  request.sh
db/: Dockerfile
ui/: check.sh  film.html  film.jsx  index.html  main.jsx  package-lock.json  package.json  styles.css
